# styletts2_synthesizer

./: pyproject.toml
.github/: workflowsbuild-release.yml
src/styletts2_synthesizer/: __init__.py  clsynthesize.py  compute.py  ljspeechimportable.py  models.py  styletts2importable.py
