[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styletts2_synthesizer"  # Changed to match Python naming conventions
version = "0.1.0"
description = "StyleTTS2 text-to-speech synthesis library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["text-to-speech", "tts", "speech-synthesis", "ai", "styletts2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "SoundFile",
    "torchaudio",
    "munch",
    "torch",
    "pydub",
    "pyyaml",
    "librosa",
    "nltk",
    "matplotlib",
    "accelerate",
    "transformers",
    "einops",
    "einops-exts",
    "tqdm",
    "typing-extensions",
    "scipy",
    "phonemizer",
    "cached-path",
    "gradio",
    "gruut",
    "txtsplit",
    "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git",
]

[project.urls]
Homepage = "https://github.com/yourusername/styletts2-synthesizer"
Repository = "https://github.com/yourusername/styletts2-synthesizer"
Issues = "https://github.com/yourusername/styletts2-synthesizer/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]  # Specify src directory
include = ["styletts2_synthesizer*"]  # Match your actual package name

[tool.setuptools.package-data]
"styletts2_synthesizer" = [
    "**/*.pth",
    "**/*.pt", 
    "**/*.yml",
    "**/*.yaml",
    "**/*.json",
    "**/*.txt",
    "**/*.md",
    "**/*.t7"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]